--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -21,6 +21,9 @@ jobs:
           distribution: 'zulu'
           java-version: '11'
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+
       - name: Download Gradle dependencies
         run: ./gradlew build --no-daemon
 
